# easyjs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Manifest.toml  Project.toml  README.md  add.js  config.ej  dom.js  example.ej  j.js  sandbox.ej  symbols.ej  t.ej  t.js  t.min.js  test.ej  test.rs  todo.md  tt.js  version_history.md  wasm_imp.ej  wbuild.bat  wrun.bat
docs/: mkdocs.yml
docs/docs/: core.md  index.md  language_features.md  native.md  std.md  ui.md
easy_utils/: Cargo.toml  README.md
easy_utils/src/utils/: ej_config.rs  js_helpers.rs  mod.rs  reader.rs  version.rs
easyjs_utils/: Cargo.toml  README.md
easyjs_utils/src/utils/: ej_config.rs  h.rs  mod.rs  sanatize.rs  version.rs
easyjsc/: Cargo.toml  README.md  easyjsn.wasm
easyjsc/src/: lib.rs  native_runner.ej  native_runner.js
easyjsc/src/builtins/: mod.rs
easyjsc/src/compiler/: import.rs  macros.rs  mod.rs  namespaces.rs  native.rs  runes.rs  transpile.rs
easyjsc/src/emitter/: arrays.rs  builtins.rs  instruction_generator.rs  mod.rs  signatures.rs  strings.rs  utils.rs
easyjsc/src/errors/: mod.rs
easyjsc/src/lexer/: lex.rs  token.rs
easyjsc/src/parser/: ast.rs  par.rs
easyjsc/src/std/: mod.rs
easyjsc/src/typechecker/: mod.rs
easyjsn/: README.md  build.py  build.zig  build.zig.zon  easyjsn.wasm
easyjsn/src/: main.zig  mem.zig  root.zig  strings.zig
easyjsr/: Cargo.toml  README.md  bindings.rs  build.rs  dev_build.rs  implemented.md  runtime.js
easyjsr/include/: wrapper.h
easyjsr/src/: lib.rs
easyjsr/src/builtins/: console.rs  mod.rs  text_decoder.rs  text_encoder.rs  web_assembly.rs
easyjsr/src/ffi/: mod.rs
easyjsr/src/modules/: mod.rs
easyjsr/src/utils/: mod.rs
easyjsr/tests/: runjs.rs
ej_tests/: ascii.ej  await.ej  classes.ej  decorator.ej  dynamic_creation.ej  expect.ej  fib.ej  import.ej  imports.ej  javascript.ej  kwargs.ej  lambda.ej  macro.ej  match.ej  native.ej  nglobal.ej  number_guesser.ej  objects.ej  prompt.ej  pyscript.ej  range.ej  require.ej  retool_t.ej  say_my_name.ej  scope.ej  se.json  strings.ej  struct.ej  struct.js  structs.ej  utils.ej  virtual.ej
ej_tests/import/: a.ej  b.ej  c.ej  d.ej
ej_tests/interpreter/: hello_world.ej
ej_tests/macros/: inline.ej
ej_tests/native/: TEST_UTILS.ej  arrays.ej  base.ej  core_strings.ej  logic.ej  strings.ej  structs.ej  test.ej  utils.ej  wasm_core.ej
examples/browser/: cdn.html  easyjs_bg.wasm  index.html  local.html
jlversion/: Manifest.toml  README.md  main.jl
jlversion/src/: build.jl
jlversion/src/lexer/: lexer.jl  token.jl
jlversion/src/parser/: ast.jl  parser.jl
jlversion/src/transpiler/: import.jl  minify.jl  transpiler.jl
jlversion/src/utils/: version.jl
jlversion/tests/: ast.jl  lexer.jl
lib/: README.md  agents.ej  builtins.ej  classes.ej  date.ej  dom.ej  easy_wasm.ej  errors.ej  expect.ej  html.ej  http.ej  io.ej  io.min.js  json.ej  malloc.ej  math.ej  native.ej  print.ej  random.ej  std.ej  strings.ej  sys.ej  types.ej  ui.ej  wasm.ej
lib/nat/: mem.ej  std.ej
lib/test/: return.ej
lib/tests/: import.ej  import.min.js  variables.ej  variables.min.js
nv/: Cargo.toml
nv/src/: lib.rs  main.rs
nv/src/lexer/: lex.rs
nv/tests/: lexer.rs  parser.rs
scripts/: build.py  build_releases.ej  build_releases.py  buildwasm.py  load_std.ej  load_std.py  move_to_bin.py
src/: lib.rs  main.jl  main.rs
src/builtins/: mod.rs
src/commands/: compile.rs  install.rs  mod.rs  repl.rs  run.rs
src/compiler/: import.rs  macros.rs  mod.rs  native.rs  transpile.rs
src/ej/: console.ej  io.ej  text_decoder.ej  text_encoder.ej
src/emitter/: fn_builder.rs  instruction_generator.rs  mod.rs  signatures.rs  strings.rs  utils.rs  variables.rs  wasm_emitter.rs
src/interpreter/: mod.rs
src/lexer/: ast.jl  lex.rs  lexer.jl  token.jl  token.rs
src/parser/: ast.jl  ast.rs  par.rs  parser.jl
src/repl/: easyjsr.rs  js_runtime.jl  mod.rs  rep.rs  repl.jl  runtime.rs
src/std/: mod.rs
src/transpiler/: number.jl  transpiler.jl  types.jl
src/utils/: h.rs  input.rs  js_helpers.rs  mod.rs  reader.rs  try.jl  version.jl  version.rs
tests/: lexer.jl  lexer.rs  parser.jl  parser.rs  test.jl  transpiler.rs
wasm/: easyjsc.js  easyjsc_bg.wasm
(+11 files in other folders)
