[package]
name = "easyjs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "easyjsc"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
minifier = "0.3.5"
wasm-bindgen = "0.2.95"
wasm-encoder = "0.224.0"

[lints.rust]
unused = "allow"
