[package]
name = "easyjs"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "easyjsc"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
minifier = "0.3.5"
serde = { version= "1.0.219", features=["derive"]}
toml = "0.8.22"
wasm-bindgen = "0.2.95"
wasm-encoder = "0.224.0"
regex = "1.11.1"
reqwest = {version="0.12.15",features=["blocking"]}
git2 = "0.20.2"
tempfile = "=3.20.0"
serde_json = "1.0.140"

[lints.rust]
unused = "allow"
