[package]
name = "easyjs"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = [ "easyjs_utils", "easyjsc", "easyjsr"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
minifier = "0.3.5"
toml = "0.8.22"
git2 = "0.20.2"
tempfile = "3.20.0"
easyjsc = { path = "./easyjsc" }
easyjs_utils = { path = "./easyjs_utils" }
easyjsr = { path = "./easyjsr" }
serde = { version= "1.0.219", features=["derive"]}
serde_json = "1.0.140"
reqwest = {version="0.12.15",features=["blocking"]}
encoding_rs = "0.8.35"

[lints.rust]
unused = "allow"
