[package]
name = "easyjs_utils"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["javascript", "compiler", "language"]
description = "easyjs to JS/wasm compiler."
homepage = "https://jordanmcastro.com/easyjs"
repository = "https://github.com/jordan-castro/easyjs"
readme = "README.md"

[dependencies]
serde = { version= "1.0.219", features=["derive"]}
serde_json = "1.0.140"
