[package]
name = "easyjsc"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["javascript", "compiler", "language"]
description = "easyjs to JS/wasm compiler."
homepage = "https://jordanmcastro.com/easyjs"
repository = "https://github.com/jordan-castro/easyjs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
wasm-encoder = { version = "0.224.0", default-features = false }
easyjs_utils = { path = "../easyjs_utils", version = "0.1.0" }
regex = "1.11.1"

[lints.rust]
unused = "allow"
