[package]
name = "easyjsr"
version = "0.4.5"
edition = "2024"
license = "Apache-2.0"
keywords = ["javascript", "runtime", "language"]
description = "easyjs internal JS runtime"
homepage = "https://jordanmcastro.com/easyjs"
repository = "https://github.com/jordan-castro/easyjs"
readme = "README.md"

[dependencies]
lazy_static = "1.5.0"

[build-dependencies]
bindgen = "0.71.0"
cc = "1.2.38"